# cpp_project

./: .gitignore  CMakeLists.txt  README.md
main_project/: CMakeLists.txt
main_project/main_project/: README.txt  main.cpp
main_project/main_project/private/: README.txt
math_lib/: CMakeLists.txt
math_lib/math_lib/: Calc.cpp  Calc.hpp  README.txt
math_lib/math_lib/private/: README.txt
